tests/compiletests/ui/dis/scalars.nocaps.stderr
error: `u8` type used without `OpCapability Int8`
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:25:5
   |
LL |     #[spirv(flat)] in_u8: u8,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: `u16` type used without `OpCapability Int16`
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:26:5
   |
LL |     #[spirv(flat)] in_u16: u16,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `u64` type used without `OpCapability Int64`
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:28:5
   |
LL |     #[spirv(flat)] in_u64: u64,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `u128` type unsupported in SPIR-V
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:30:5
   |
LL | /     #[cfg(not(supported))]
LL | |     #[spirv(flat)]
LL | |     in_u128: u128,
   | |_________________^

error: `i8` type used without `OpCapability Int8`
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:34:5
   |
LL |     #[spirv(flat)] in_i8: i8,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: `i16` type used without `OpCapability Int16`
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:35:5
   |
LL |     #[spirv(flat)] in_i16: i16,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `i64` type used without `OpCapability Int64`
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:37:5
   |
LL |     #[spirv(flat)] in_i64: i64,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `i128` type unsupported in SPIR-V
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:39:5
   |
LL | /     #[cfg(not(supported))]
LL | |     #[spirv(flat)]
LL | |     in_i128: i128,
   | |_________________^

error: `f64` type used without `OpCapability Float64`
   |
note: used from within Fragment entry-point `main`
  --> $DIR/scalars.rs:44:5
   |
LL |     #[spirv(flat)] in_f64: f64,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

